--- a/public/css/meipian.css
+++ b/public/css/meipian.css
@@ -256,6 +256,7 @@
 .specialTopic .specialTopicList li{
   width: 40%;
   display: inline-block;
+  margin-right: 5px;
 }
 .specialTopic .specialTopicList li a{
   width: 100%;
