--- a/public/css/topicDetails/topicDetails.css
+++ b/public/css/topicDetails/topicDetails.css
@@ -6,11 +6,27 @@
 #topicDetailsConetnt .topBar {
   width: 100%;
   height: 200px;
-  background: url('../../images/timg.jpg') no-repeat;
+  background: url('../../images/timg1.jpg') no-repeat;
   background-size: 100% 100%;
   position: relative;
 }
-
+#topicDetailsConetnt .topBar .top{
+  width: 100%;
+  height: 50px;
+}
+/* 隐藏顶部通栏 */
+#topicDetails .topShowOrHide{
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  opacity: 0;
+  display: none;
+  z-index: 999;
+  border-bottom: 1px solid #eee;
+}
 #topicDetailsConetnt .topBar .pictureInfo {
   position: absolute;
   left: 20px;
