--- a/public/css/rankingList/rankingList.css
+++ b/public/css/rankingList/rankingList.css
@@ -13,15 +13,12 @@
 .medal .first,
 .medal .third {
   flex: 1;
-  border: 1px solid #eee;
-  height: 100px;
+  height: 120px;
 }
 
 .medal .first {
-  height: 120px;
+  height: 140px;
   margin-top: -20px;
-  border-left: 1px solid #eee;
-  border-right: 1px solid #eee;
 }
 
 .medal .sign {
@@ -31,12 +28,72 @@
   position: relative;
 }
 
-.medal .sign img {
+.medal .sign >img {
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   margin-top: -7px;
   position: absolute;
   left: 50%;
   margin-left: -20px;
+}
+.sign .infoTou {
+  position: absolute;
+  top: 50%;
+  margin-top: -25px;
+  left: 50%;
+  margin-left: -25px;
+}
+.sign .infoTou >img{
+  display: block;
+  width: 45px;
+  height: 45px; 
+  margin: 0 auto;
+  border-radius: 50%;
+}
+.sign .infoName{
+  font-size: 14px;
+  color: #333;
+  text-align: center;
+  position: absolute;
+  top: 72%;
+  margin-left: -30px;
+  left: 50%;
+}
+.first .infoName{
+  top: 75%;
+}
+.first .infoTou >img{
+  width: 55px;
+  height: 55px;
+  margin-left: -6px;
+}
+.rank_list {
+  width: 100%;
+  background-color: #fff;
+}
+.rank_list ul{
+  padding-left: 10px;
+}
+.rank_list li {
+  width: 100%;
+  height: 60px;
+  line-height: 40px;
+  border-top: 1px solid #eee;
+  text-align: center;
+  font-size: 14px;
+  padding: 10px 10px 10px 0px;
+  background-color: #fff;
+  display: flex;
+}
+.rank_list li .order{
+  color: #a2a2a2; 
+}
+.rank_list li >img{
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 15px;
+  margin-right: 15px;
 }
