修改的回到顶部等bug

--- a/public/css/topicDetails/topicDetails.css
+++ b/public/css/topicDetails/topicDetails.css
@@ -26,6 +26,8 @@
   display: none;
   z-index: 999;
   border-bottom: 1px solid #eee;
+  text-align: center;
+  line-height: 50px;
 }
 #topicDetailsConetnt .topBar .pictureInfo {
   position: absolute;
