--- a/public/css/findHoby/findHoby.css
+++ b/public/css/findHoby/findHoby.css
@@ -13,6 +13,7 @@ ul{
   border-right: 2px solid #fff;
   color: #9c9c9c;
   font-size: 15px;
+  transition: all 0.5s;
 }
 .hobyRight{
   padding: 10px;
